--- a/styles/news-block.css
+++ b/styles/news-block.css
@@ -6,7 +6,7 @@
 .news-block__query {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-between;
+	justify-content: space-around;
 	padding-top: 40px;
 	padding-bottom: 50px;
 	gap: 40px 20px;
