--- a/styles/page.css
+++ b/styles/page.css
@@ -2,3 +2,10 @@
 	padding-right: 150px;
 	padding-left: 150px;
 }
+
+@media(max-width:1400px) {
+	.page {
+		padding-right: 50px;
+		padding-left: 50px;
+	}
+}
